<resources>
    <string name="app_name">Petagram</string>
    <string name="action_settings">Contacto</string>
    <string name="btn_acceso">Bienvenido a la casa de la mascota</string>
    <string name="hin_nombre">Nombre Mascota</string>
    <string name="action_favorito">Agregar</string>
    <string name="action_edit">Edit</string>
    <!--<string name="action_help">Help</string>-->
    <string name="action_about">Acerca de</string>
    <string name="action_cuenta">Configurar Cuenta</string>
    <string name="hint_email">Ingrese su Email</string>
    <string name="hint_usuario">Escribe tu Usuario</string>
    <string name="err_msg_email">Ingrese email válido</string>
    <string name="hint_nombreContacto">Ingrese su Nombre Completo</string>
    <string name="hint_cuenta">Petagram</string>
    <string name="err_nombreContacto">Llene el campo nombre</string>
    <string name="hint_subject">Subject</string>
    <string name="err_subject">Llene el campo Subject</string>
    <string name="hint_message">Message</string>
    <string name="err_message">Llene el campo Message</string>
    <string name="btn_siguiente">Send</string>
    <string name="btn_guardar_cuenta">Guardar Cuenta</string>
    <string name="Enviado">Email Enviado</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="biografia">
        Este aplicativo fue desarrollado por el programador GUSTAVO OVELAR, nacido el 18 de setiembre de 1978, en 1995 obtuvo su primer diploma en informática
        como operador de computadores en los modulos DOS, WORD PERFECT, QPRO.
        en el mismo año se graduo como Vice Sargento 1º de Ingenieria en el COLEGIO MILITAR JOSE FELIX ESTIGARRIVIA obteniendo la mension de honor
        como mejor graduado del Arma de INGENIERIA del Ejercito paraguayo.
        En marzo de 1997 ingreso en la prestigiosa Univerdad (UNIVERSIDAD COLUMBIA DEL PARAGUAY)en la carrera de INGENIERIA EN CIENCIAS DE LA INFORMATICA



    </string>
</resources>