<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context=".MainActivity">

    <item
        android:id="@+id/action_favorito"
        android:icon="@drawable/starcolor"
        android:title="@string/action_favorito"
        app:showAsAction="always" />

    <item
        android:id="@+id/action_edit"
        android:icon="@drawable/edit_property_48"
        android:title="@string/action_edit"
        app:showAsAction="ifRoom" />


    <!-- MENU -->

    <item
        android:id="@+id/action_contacto"
        android:title="@string/action_settings"
        app:showAsAction="never" />

    <!--<item
        android:id="@+id/action_help"
        android:title="@string/action_help"
        app:showAsAction="never" />-->

    <item
        android:id="@+id/action_about"
        android:title="@string/action_about"
        app:showAsAction="never" />

    <item
        android:id="@+id/action_cuenta"
        android:title="@string/action_cuenta"
        app:showAsAction="never" />
</menu>